Fixed spacing bug (thanks flexbox)

--- a/index.css
+++ b/index.css
@@ -6,6 +6,13 @@ h1{
     text-align: center;
     font-family:sans-serif;
 }
+ul{
+    display: flex;
+}
 a{
     text-decoration: none;
+    display: inline;
+}
+figure{
+    display: inline;
 }
